# enterprise-knowledge-platform

./: .dockerignore  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
app/agents/: base.py  chat_agent.py  knowledge_agent.py  tool_agent.py
app/api/: app.py  router.py
app/api/routes/: chat.py  documents.py  health.py  retrieval.py  root.py  tools.py
app/config/: logging.py  settings.py
app/graph/: builder.py  nodes.py  state.py  workflow.py
app/integrations/calender/: calendar_service.py
app/integrations/github/: github_issue_service.py
app/integrations/gmail/: auth.py  gmail_service.py
app/integrations/hr/: hr_service.py
app/integrations/notification/: notification_service.py
app/models/: chat.py  document.py  email.py  retrieval.py  tool.py
app/rag/chunking/: text_splitter.py
app/rag/loaders/: pdf_loader.py
app/rag/retriever/: retriever.py
app/rag/storage/: local_storage.py
app/rag/vectorstore/: chroma_store.py
app/services/: chat_service.py  document_indexer.py  document_service.py  embedding_service.py  intent_service.py  llm_service.py  prompt_service.py  rag_service.py  tool_service.py
app/tools/: base.py  email_tool.py  knowledge_search_tool.py  leave_tool.py  ticket_tool.py  tool_registry.py
data/chroma/25a55baa-e16e-42d3-b75d-09152c81ce1a/: index_metadata.pickle
docker/: backend.Dockerfile  frontend.Dockerfile
frontend/: app.py  config.py
frontend/api/: client.py  factory.py
frontend/components/: chat.py  document_list.py  sidebar.py  status.py
frontend/models/: responses.py
frontend/services/: chat_service.py  health_service.py  upload_service.py
frontend/utils/: session.py
scripts/: generate_graph.py
tests/graph/: test_general_chat.py  test_graph.py
tests/manual/: test_gmail_auth.py  test_send_email.py  test_structured_output.py
tests/services/: test_intent_service.py
